chore: ajustando algumas coisa com o arquivados